Operator architecture refactoring (#95)  * worked on algorithms, problems and parameters
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2890 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Parameters/3.3/HeuristicLab.Parameters-3.3.csproj
+++ b/sources/HeuristicLab.Parameters/3.3/HeuristicLab.Parameters-3.3.csproj
@@ -68,9 +68,9 @@
     <None Include="HeuristicLabParametersPlugin.cs.frame" />
     <Compile Include="ConstrainedValueParameter.cs" />
     <Compile Include="LookupParameter.cs" />
+    <Compile Include="OptionalValueParameter.cs" />
     <Compile Include="SubScopesLookupParameter.cs" />
     <Compile Include="ValueLookupParameter.cs" />
-    <Compile Include="ValueParameter.cs" />
     <Compile Include="ScopeParameter.cs" />
     <Compile Include="HeuristicLabParametersPlugin.cs" />
     <Compile Include="OperatorParameter.cs" />
