checked and corrected (where necessary) BLX-a, BLX-a-b, as well the SinglePointCrossover checked the UniformOnePositionManipulator fixed a copy-paste oversight in RealVectorManipulator #890
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2913 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Encodings.RealVector/3.3/HeuristicLab.Encodings.RealVector-3.3.csproj
+++ b/sources/HeuristicLab.Encodings.RealVector/3.3/HeuristicLab.Encodings.RealVector-3.3.csproj
@@ -90,6 +90,10 @@
     <Compile Include="RealVectorManipulator.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Crossovers\BlendAlphaCrossover.cs" />
+    <Compile Include="Crossovers\SinglePointCrossover.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="HeuristicLabEncodingsRealVectorPlugin.cs" />
     <None Include="HeuristicLab.snk" />
     <None Include="Properties\AssemblyInfo.frame" />
